--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,26 +1,31 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">CAREdox</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      (click)="isCollapsed = !isCollapsed"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div
-      class="collapse navbar-collapse"
-      id="navbarNav"
-      [ngbCollapse]="isCollapsed"
-    >
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Patients</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Profile</a>
-        </li>
-        <form #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login" autocomplete="off">
+<div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">CAREdox</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        (click)="isCollapsed = !isCollapsed"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div
+        class="collapse navbar-collapse"
+        id="navbarNav"
+        [ngbCollapse]="isCollapsed"
+      >
+        <ul class="navbar-nav" *ngIf="accountService.currentUser$ | async">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Patients</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"(click)="logout()">Logout</a>
+          </li>
+        </ul>
+        <form #loginForm="ngForm" *ngIf="(accountService.currentUser$ | async) === null" class="form-inline mt-2 mt-md-0"  (ngSubmit)="login()" autocomplete="off">
           <input 
             name="username"
             [(ngModel)]="model.username"
@@ -35,8 +40,8 @@
             placeholder="Password">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
         </form>
-        
-      </ul>
+  
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
+</div>
