--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -4,8 +4,9 @@
         <p class="lead">Login to view your schedule</p>
     </div >
 
-    <div *ngIf="(accountService.currentUser$ | async) != null" style="text-align: center;">
+    <div *ngIf="(accountService.currentUser$ | async) !== null" style="text-align: center;">
         <h3>Todays clients </h3>
+        
     </div>
 
 
@@ -17,9 +18,7 @@
 
 
 
-   <!--<div *ngIf="!registerMode" style="text-align: center;">
-        <h1>Welcome to CAREdox</h1>
-        <p class="lead">Login to view your schedule</p>
+   <div *ngIf="!registerMode" style="text-align: center;">
 
         <div class="text-center">
             <button (click) = "registerToggle()" class="btn btn-primary btn-lg mr-2">Registration</button>
@@ -31,7 +30,7 @@
                 <app-register></app-register>
             </div>
         </div>
-    </div>-->
+    </div>
 
 
 
