--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">CAREdox</a>
+      <a class="navbar-brand" routerLink="/" routerLinkActive="active">CAREdox</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -16,13 +16,16 @@
       >
         <ul class="navbar-nav" *ngIf="accountService.currentUser$ | async">
           <li class="nav-item">
-            <a class="nav-link" href="#">Patients</a>
+            <a class="nav-link" routerLink="messages" routerLinkActive="active">Messages</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
+            <a class="nav-link" routerLink="profile" routerLinkActive="active">Profile</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"(click)="logout()">Logout</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink='/errors' routerLinkActive="active">Errors</a>
           </li>
         </ul>
         <form #loginForm="ngForm" *ngIf="(accountService.currentUser$ | async) === null" class="form-inline mt-2 mt-md-0"  (ngSubmit)="login()" autocomplete="off">
