--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,38 +1,26 @@
 <div class="container mt-5">
-    <div *ngIf="(accountService.currentUser$ | async) === null" style="text-align: center;">
-        <h1>Welcome to CAREdox</h1>
-        <p class="lead">Login to view your schedule</p>
-    </div >
 
     <div *ngIf="(accountService.currentUser$ | async) !== null" style="text-align: center;">
         <h3>Todays clients </h3>
-        
-    </div>
+        <app-patient-list></app-patient-list>
 
-
-
-
-
-
-
-
-
-
-   <div *ngIf="!registerMode" style="text-align: center;">
-
-        <div class="text-center">
-            <button (click) = "registerToggle()" class="btn btn-primary btn-lg mr-2">Registration</button>
-        </div>
-    </div>
-    <div *ngIf="registerMode" class="container">
-        <div class="row justify-content-center">
-            <div class="col-4">
-                <app-register></app-register>
+        <div *ngIf="adminMode == true">
+            <div *ngIf="!registerMode " style="text-align: center;">
+    
+                <div class="text-center">
+                    <button (click) = "registerToggle()" class="btn btn-primary btn-lg mr-2">Add Staff</button>
+                </div>
+                <div class="text-center">
+                    <button (click) = "registerToggle()" class="btn btn-primary btn-lg mr-2 mt-2">Add Patient</button>
+                </div>
+            </div>
+            <div *ngIf="registerMode" class="container">
+                <div class="row justify-content-center">
+                    <div class="col-4">
+                        <app-register (cancelRegister) = "cancelRegisterMode()"></app-register>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
-
-
-
 </div>
