--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" routerLink="/" routerLinkActive="active">CAREdox</a>
+      <a class="navbar-brand" >CAREdox</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -14,19 +14,22 @@
         id="navbarNav"
         [ngbCollapse]="isCollapsed"
       >
-        <ul class="navbar-nav" *ngIf="accountService.currentUser$ | async">
+        <ul class="navbar-nav" *ngIf="accountService.currentUser$ | async as user">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/" routerLinkActive="active">Clients</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="messages" routerLinkActive="active">Messages</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="profile" routerLinkActive="active">Profile</a>
+            <a class="nav-link" routerLink="/profile/{{model.username}}" routerLinkActive="active">Profile</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"(click)="logout()">Logout</a>
           </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link" routerLink='/errors' routerLinkActive="active">Errors</a>
-          </li>
+          </li>-->
         </ul>
         <form #loginForm="ngForm" *ngIf="(accountService.currentUser$ | async) === null" class="form-inline mt-2 mt-md-0"  (ngSubmit)="login()" autocomplete="off">
           <input 
@@ -48,3 +51,7 @@
     </div>
   </nav>
 </div>
+<div *ngIf="(accountService.currentUser$ | async) === null" style="text-align: center; padding-top: 2%;">
+  <h1>Welcome to CAREdox</h1>
+  <p class="lead">Login to view your schedule</p>
+</div >
