major update to admin

--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,5 +1,5 @@
 <form #registerForm = "ngForm" (ngSubmit) = "register()" autocomplete="off">
-    <div class="text-center text-primary">Add a new user</div>
+    <div class="text-center text-primary">Add a new staff user</div>
     <hr>
     <div class="form-group">
         <input  type="text" class="form-control" name= "username" [(ngModel)]="model.username" placeholder="Username">
