--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,24 +3,8 @@
     <div *ngIf="(accountService.currentUser$ | async) !== null" style="text-align: center;">
         <h3>Todays clients </h3>
         <app-patient-list></app-patient-list>
-
-        <div *ngIf="adminMode == true">
-            <div *ngIf="!registerMode " style="text-align: center;">
-    
-                <div class="text-center">
-                    <button (click) = "registerToggle()" class="btn btn-primary btn-lg mr-2">Add Staff</button>
-                </div>
-                <div class="text-center">
-                    <button (click) = "registerToggle()" class="btn btn-primary btn-lg mr-2 mt-2">Add Patient</button>
-                </div>
-            </div>
-            <div *ngIf="registerMode" class="container">
-                <div class="row justify-content-center">
-                    <div class="col-4">
-                        <app-register (cancelRegister) = "cancelRegisterMode()"></app-register>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
+        <h6>Supervisor : Lindsay James</h6>
+        <p>Contact number: 07898989865</p>
     </div>
 </div>
