--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" >CAREdox</a>
+      <a class="navbar-brand" routerLink="/">CAREdox</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -19,11 +19,14 @@
             <a class="nav-link" routerLink="/" routerLinkActive="active">Clients</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="messages" routerLinkActive="active">Messages</a>
+            <a class="nav-link" routerLink="/admin" routerLinkActive="active">Admin</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/profile/{{model.username}}" routerLinkActive="active">Profile</a>
+            <a class="nav-link" routerLink="messages" routerLinkActive="active">Messages</a>
           </li>
+          <!--<li class="nav-item">
+            <a class="nav-link" routerLink="/profile/{{model.username}}" routerLinkActive="active">Profile</a>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="#"(click)="logout()">Logout</a>
           </li>
