--- a/client/src/app/patient-card/patient-card.component.html
+++ b/client/src/app/patient-card/patient-card.component.html
@@ -7,6 +7,8 @@
             {{patient.name}}
         </h6>
         <p class = "card-text text-muted text-center">{{patient.address}}</p>
+        <p><i class="fa fa-phone mr-2"></i>07676453234</p>
+
         <div class="mb-3">
             <button class="btn btn-success" routerLink="/patients/{{patient.id}}">Details</button>
 
