added patient list edit

--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -4,7 +4,7 @@
     <div class="row justify-content-center">
         <div class="col-8">
             <h5>Staff Management </h5>
-            <button class="btn btn-primary btn-block m-2" routerLink="/profiles/edit" >Edit existing staff member</button>
+            <button class="btn btn-primary btn-block m-2" routerLink="/profiles/edit" >Manage staff</button>
             <button class="btn btn-primary btn-block m-2" routerLink="/profiles/edit" >Add new staff member</button>
         </div>
     </div>
