--- a/client/src/app/staff-edit/staff-edit.component.html
+++ b/client/src/app/staff-edit/staff-edit.component.html
@@ -36,10 +36,10 @@
                 </div>
                 <textarea class="form-control" [(ngModel)]="staff.address" name="address" rows="1"></textarea>
                 <div>
-                    <strong>Age:</strong>
-                    <p>{{staff.age}}</p>
+                    <strong>Contact Number:</strong>
+                    <p>{{staff.contactNumber}}</p>
                 </div>
-                <textarea class="form-control" [(ngModel)]="staff.age" name="age" rows="1"></textarea>
+                <textarea class="form-control" [(ngModel)]="staff.contactNumber" name="contactNumber" rows="1"></textarea>
                 <div>
                     <button class="btn btn-primary mt-3" routerLink='/patientListEdit/{{staff.username}}'>Edit Patients</button>
                 </div>
