--- a/client/src/app/patient-list-edit/patient-list-edit.component.html
+++ b/client/src/app/patient-list-edit/patient-list-edit.component.html
@@ -1,29 +1,42 @@
 <div class="col8" >
     <div class="row">
-          <h4>{{staff?.fullName}} - Clients</h4>
+          <h4>Clients</h4>
     </div>
-    <button class="btn btn-success m-1">Add a client</button>
-    <table class="table table-striped">
-    <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Id</th>
-          <th scope="col">Name</th>
-          <th scope="col">Address</th>
-          <th scope="col"></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let patient of patients; index as i">
-          <th scope="row">{{ i + 1 }}</th>
-          <td>
-            <i class="fa fa-user mr-2"></i>
-            {{ patient.id }}
-          </td>
-          <td>{{ patient.name}}</td>
-          <td>{{ patient.address}}</td>
-          <td><button class="btn btn-warning">Remove</button></td>
-        </tr>
-        </tbody>
-      </table>
 </div>
+   
+<div class="col8" >
+  <div class="row">
+        <div ngbDropdown class="d-inline-block">
+          <button class="btn btn-outline-primary mb-2" id="dropdownBasic1" ngbDropdownToggle>Add Client</button>
+          <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+              <div *ngFor="let patient of allPatients">
+                  <button class="btn btn-warning m-1" (click)="loadStaffAddPatient(patient.id)">{{patient.id}} : {{patient.name}} <i class="fa fa-plus" ></i> </button>
+              </div>
+        </div>
+      </div>
+  </div>
+</div>
+<table class="table table-striped">
+  <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Id</th>
+        <th scope="col">Name</th>
+        <th scope="col">Address</th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let patient of patients; index as i">
+        <th scope="row">{{ i + 1 }}</th>
+        <td>
+          <i class="fa fa-user mr-2"></i>
+          {{patient.id }}
+        </td>
+        <td>{{patient.name}}</td>
+        <td>{{patient.address}}</td>
+        <td><button class="btn btn-secondary" (click)="loadStaffMemberAndRemovePatient(patient.id)">Remove</button></td>
+      </tr>
+    </tbody>
+</table>
+      
