--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -5,14 +5,14 @@
         <div class="col-8">
             <h5>Staff Management </h5>
             <button class="btn btn-primary btn-block m-2" routerLink="/profiles/edit" >Manage staff</button>
-            <button class="btn btn-primary btn-block m-2" routerLink="/profiles/edit" >Add new staff member</button>
+            <button class="btn btn-primary btn-block m-2" routerLink="/admin/register" >Add new staff member</button>
         </div>
     </div>
     <hr>
     <div class="row justify-content-center">
         <div class="col-8">
             <h5>Patient Management </h5>
-            <button class="btn btn-primary btn-block m-2">Edit existing patient </button>
+            <button class="btn btn-primary btn-block m-2" routerLink="/admin/patientEdit">Edit existing patient </button>
             <button class="btn btn-primary btn-block m-2">Add patient </button>
         </div>
     </div>
