--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,15 +1,15 @@
 <form #registerForm = "ngForm" (ngSubmit) = "register()" autocomplete="off">
-    <div class="text-center text-primary">Add a new staff user</div>
+    <div class="text-center text-primary">Add a new staff account</div>
     <hr>
-    <div class="form-group">
-        <input  type="text" class="form-control" name= "username" [(ngModel)]="model.username" placeholder="Username">
-    </div>
     <div class="form-group">
         <input  type="password" class="form-control" name= "password" [(ngModel)]="model.password" placeholder="Password">
     </div>
+    <div class="form-group">
+        <input  type="text" class="form-control" name= "username" [(ngModel)]="model.username" placeholder="Full Name">
+    </div>
+    
     <div class="form-group text-center">
-        <button class="btn btn-success mr-2" type="submit">Register</button>
-        <button class="btn btn-default mr-2" style="background-color: rgb(230, 230, 230);" (click)="cancel()" type="button">Cancel</button>
+        <button class="btn btn-success mr-2" type="submit">Continue</button>
+        
     </div> 
-
 </form>
