--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -12,8 +12,8 @@
     <div class="row justify-content-center">
         <div class="col-8">
             <h5>Patient Management </h5>
-            <button class="btn btn-primary btn-block m-2" routerLink="/admin/patientEdit">Edit existing patient </button>
-            <button class="btn btn-primary btn-block m-2">Add patient </button>
+            <button class="btn btn-primary btn-block m-2" routerLink="/admin/patientEdit">Edit / View existing patients </button>
+            <button class="btn btn-primary btn-block m-2" routerLink="/admin/patientRegister">Add patient </button>
         </div>
     </div>
     <hr>
