--- a/client/src/app/staff/messages/messages.component.html
+++ b/client/src/app/staff/messages/messages.component.html
@@ -1,1 +1,12 @@
-<p>messages works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+
+            <h4>
+                Your Messages
+            </h4>
+            <button class="btn btn-success" routerLink="/create">New Message</button>
+            <p *ngFor="let msg of messages">{{msg.id}}</p>
+        </div>
+    </div>
+</div>
