--- a/client/src/app/register-patient/register-patient.component.html
+++ b/client/src/app/register-patient/register-patient.component.html
@@ -19,7 +19,7 @@
                 <input  type="text" class="form-control" name= "fullName" [(ngModel)]="model.fullName" placeholder="Full name">
             </div>
             <div class="form-group">
-                <input  type="text" class="form-control" name= "dateOfBirth" [(ngModel)]="model.dateOfBirth" placeholder="Date of Birth">
+                <input  type="text" class="form-control" name= "dateOfBirth" [(ngModel)]="model.dateOfBirth" placeholder="Date of Birth YYYY-MM-DD">
             </div>
             <div class="form-group text-center">
                 <button class="btn btn-success mr-2" type="submit">Register</button>
