--- a/client/src/app/patient-edit/patient-edit.component.html
+++ b/client/src/app/patient-edit/patient-edit.component.html
@@ -21,9 +21,9 @@
                 </div>
                 <textarea class="form-control" [(ngModel)]="patient.address" name="address" rows="1"></textarea>
                 <div>
-                    <strong>Known As:</strong>
+                    <strong>Contact Number:</strong>
                 </div>
-                <textarea class="form-control" [(ngModel)]="patient.knownAs" name="contactNumber" rows="1"></textarea>
+                <textarea class="form-control" [(ngModel)]="patient.contactNumber" name="contactNumber" rows="1"></textarea>
             </form>
             </div>
                 <div class="card-footer">
