--- a/client/src/app/patient-card/patient-card.component.html
+++ b/client/src/app/patient-card/patient-card.component.html
@@ -4,10 +4,10 @@
     </div>
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1 mt-2"><i class="fa fa-user mr-2"></i>
-            {{patient.name}}
+            {{patient?.name}}
         </h6>
         <p class = "card-text text-muted text-center">{{patient?.address}}</p>
-        <p><i class="fa fa-phone mr-2"></i>07676453234</p>
+        <p><i class="fa fa-phone mr-2"></i> Contact Number: {{patient?.contactNumber}}</p>
 
         <div class="mb-3">
             <button class="btn btn-success" routerLink="/patients/{{patient.id}}">Details</button>
