--- a/client/src/app/patient-details/patient-details.component.html
+++ b/client/src/app/patient-details/patient-details.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-10" style="float:none;margin:auto;">
+    <div class="col-12" >
         <div class="card">
             <h5 class="pt-4 pl-3">Patient Profile<div *ngIf="complete" style="color: rgb(0, 155, 0); display: inline;"> - Complete <i class="fa fa-check mr-2"></i></div></h5>
             <!--<img src='assets/user.jpg' alt="{{patient.fullname}}"
@@ -79,7 +79,7 @@
                         <p>{{ app.details }}</p>
                     </div>
                     
-                    <input class="form-control form-control-lg mt-1" id="details" type="text" placeholder="Appointment details, how did it go?"[(ngModel)]="appDetails" *ngIf="!complete">    
+                    <input class="form-control form-control-lg mt-1" id="details" type="text" placeholder="Appointment details"[(ngModel)]="appDetails" *ngIf="!complete">    
                 </div>
 
             </div>
