--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -1,11 +1,14 @@
 
 <div>
-    
     <div class="row justify-content-center">
         <div class="col-8">
+            <button class="btn btn-info btn-block m-2" routerLink="/admin/logs" >Logs</button>
+        </div>
+        <hr>
+        <div class="col-8">
             <h5>Staff Management </h5>
-            <button class="btn btn-primary btn-block m-2" routerLink="/profiles/edit" >Manage staff</button>
-            <button class="btn btn-primary btn-block m-2" routerLink="/admin/register" >Add new staff member</button>
+            <button class="btn btn-success btn-block m-2" routerLink="/profiles/edit" >Manage staff</button>
+            <button class="btn btn-success btn-block m-2" routerLink="/admin/register" >Add new staff member</button>
         </div>
     </div>
     <hr>
