--- a/client/src/app/patient-details/patient-details.component.html
+++ b/client/src/app/patient-details/patient-details.component.html
@@ -79,7 +79,7 @@
                         <p>{{ app.details }}</p>
                     </div>
                     
-                    <input class="form-control form-control-lg mt-1" id="details" type="text" placeholder="Appointment details"[(ngModel)]="appDetails" *ngIf="!complete">    
+                    <input class="form-control form-control-lg mt-1" id="details" type="text" placeholder="Appointment details"[(ngModel)]="appDetails" *ngIf="!complete" required>    
                 </div>
 
             </div>
