--- a/client/src/app/register-patient/register-patient.component.html
+++ b/client/src/app/register-patient/register-patient.component.html
@@ -4,22 +4,22 @@
             <div class="text-center text-primary">Add a new patient</div>
             <hr>
             <div class="form-group">
-                <input  type="text" class="form-control" name= "name" [(ngModel)]="model.name" placeholder="Name">
+                <input  type="text" class="form-control" name= "name" [(ngModel)]="model.name" placeholder="Name" required>
             </div>
             <div class="form-group">
-                <input  type="text" class="form-control" name= "address" [(ngModel)]="model.address" placeholder="Address">
+                <input  type="text" class="form-control" name= "address" [(ngModel)]="model.address" placeholder="Address" required>
             </div>
             <div class="form-group">
-                <input  type="text" class="form-control" name= "knownAs" [(ngModel)]="model.knownAs" placeholder="Known As">
+                <input  type="text" class="form-control" name= "knownAs" [(ngModel)]="model.knownAs" placeholder="Known As" required>
             </div>
             <div class="form-group">
-                <input  type="text" class="form-control" name= "gender" [(ngModel)]="model.gender" placeholder="Gender">
+                <input  type="text" class="form-control" name= "gender" [(ngModel)]="model.gender" placeholder="Gender" required>
             </div>
             <div class="form-group">
-                <input  type="text" class="form-control" name= "fullName" [(ngModel)]="model.fullName" placeholder="Full name">
+                <input  type="text" class="form-control" name= "fullName" [(ngModel)]="model.fullName" placeholder="Full name" required>
             </div>
             <div class="form-group">
-                <input  type="text" class="form-control" name= "dateOfBirth" [(ngModel)]="model.dateOfBirth" placeholder="Date of Birth YYYY-MM-DD">
+                <input  type="text" class="form-control" name= "dateOfBirth" [(ngModel)]="model.dateOfBirth" placeholder="Date of Birth YYYY-MM-DD" required>
             </div>
             <div class="form-group text-center">
                 <button class="btn btn-success mr-2" type="submit">Register</button>
