--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -2,10 +2,10 @@
     <div class="text-center text-primary">Add a new staff account</div>
     <hr>
     <div class="form-group">
-        <input  type="password" class="form-control" name= "password" [(ngModel)]="model.password" placeholder="Password">
+        <input  type="password" class="form-control" name= "password" [(ngModel)]="model.password" placeholder="Password" required>
     </div>
     <div class="form-group">
-        <input  type="text" class="form-control" name= "username" [(ngModel)]="model.username" placeholder="Full Name">
+        <input  type="text" class="form-control" name= "username" [(ngModel)]="model.username" placeholder="Full Name" required>
     </div>
     
     <div class="form-group text-center">
